[#156816419] Fixed footer links on mobile & tablet.

--- a/frontend-main/components/organisms/FooterLinksPane/_style.scss
+++ b/frontend-main/components/organisms/FooterLinksPane/_style.scss
@@ -1,9 +1,8 @@
 .footer-links-pane__link_block {
-  text-align: center;
-
   a {
     font-weight: bold;
     color: $warm-grey;
+    line-height: 2;
 
     &:hover {
       color: $primary;
@@ -12,10 +11,11 @@
   }
 
   // Allow link items to use more space if needed.
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     flex: 0.5 1 auto;
     flex-wrap: nowrap;
     width: auto;
     padding: 0 5px;
+    text-align: center;
   }
 }
